# src/main/java/com/dev/listi/app/dto/ClientRecord.java
@@ -1,0 +1,4 @@
+package com.dev.listi.app.dto;
+
+public record ClientRecord(String name, String email) {
+}
